--- a/includes/main/dash-sections/content.pug
+++ b/includes/main/dash-sections/content.pug
@@ -1,8 +1,4 @@
-section.content.bg-white.p20
-  header(class="bg-white flex-between p14")
-    div(class="search p-relative")
-      input(class="rad-10", type="search", name="search", placeholder="type a keyword")
-    div(class="icons d-flex align-center")
-      span(class="notification p-relative")
-        i.fa-regular.fa-bell.fa-lg
-      img(src="img/profile.jpg", alt="profile photo", width="32px", height="32px")
+section.content.bg-white
+  include content-sections/header.pug
+  include content-sections/waper.pug
+  
