--- a/css/sass/layout/_global.scss
+++ b/css/sass/layout/_global.scss
@@ -1,3 +1,6 @@
+@use "../helpers/vars" as *;
+
+
 //main font
 @font-face {   
   font-family: "open sans";   
@@ -19,6 +22,21 @@ html {
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar-track {
+  background-color: rgb(195, 226, 207);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba($color: #0075ff, $alpha: 0.5);
+  &:hover {
+    background-color: #0075ff;
+  }
+}
+
 body {
   font-family: "open sans";
   background-color: #f1f5f9;
@@ -30,4 +48,8 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+p {
+  color: $gray-color;
 }
