--- a/includes/main/dash-sections/content.pug
+++ b/includes/main/dash-sections/content.pug
@@ -1,4 +1,5 @@
 section.content.bg-white
   include content-sections/header.pug
   include content-sections/waper.pug
+  include content-sections/table.pug
   
