i will make it agin

--- a/includes/setting/sideBar.pug
+++ b/includes/setting/sideBar.pug
@@ -2,12 +2,12 @@ aside.sidebar.bg-White.p-relative.p20
   h3.p-relative.mt20.txt-center profile
   ul
     li
-      a(class="active d-flex align-center rad-6", href="index.html")
+      a(class="d-flex align-center rad-6", href="../index.html")
         i.fa-regular.fa-chart-bar.fa-fw
         span dash board
     
     li
-      a(class="d-flex align-center rad-6", href="pages/setting.html")
+      a(class="active d-flex align-center rad-6", href="setting.html")
         i.fa-solid.fa-gear.fa-fw
         span settings
     
