--- a/css/master.css
+++ b/css/master.css
@@ -97,7 +97,7 @@ main.main-page aside.sidebar ul li a {
   padding: 10px 0;
   font-size: 14px;
   color: black;
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
   margin-bottom: 5px;
 }
 main.main-page aside.sidebar ul li a.active, main.main-page aside.sidebar ul li a:hover {
@@ -262,7 +262,7 @@ main.main-page .content .waper .welcome .welcome-footer a {
   margin: 20px 10px;
 }
 main.main-page .content .waper .welcome .welcome-footer a:hover {
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
   background-color: #0d69d5;
 }
 main.main-page .content .waper .draft h2 {
@@ -298,7 +298,7 @@ main.main-page .content .waper .draft form input[type=submit] {
   cursor: pointer;
 }
 main.main-page .content .waper .draft form input[type=submit]:hover {
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
   background-color: #0d69d5;
 }
 main.main-page .content .waper .target {
@@ -480,7 +480,7 @@ main.main-page .content .waper .task .task-rwo .delete {
   cursor: pointer;
 }
 main.main-page .content .waper .task .task-rwo .delete:hover {
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
   color: #f44336;
 }
 main.main-page .content .waper .task .task-rwo .done {
@@ -541,7 +541,7 @@ main.main-page .content .waper .last-project .process li::before {
   outline: 2px solid #0075ff;
 }
 main.main-page .content .waper .last-project .process li.still::before {
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
   animation: fade 2s infinite linear;
 }
 main.main-page .content .waper .last-project .process li.current::before {
@@ -609,6 +609,84 @@ main.main-page .table table tbody tr td:nth-child(5) {
 }
 main.main-page .table table tbody tr td:nth-child(6) {
   margin-top: 10px;
+}
+
+/** @format */
+.content.bg-white {
+  height: 100vh;
+}
+.content.bg-white main#control {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  gap: 20px;
+}
+@media (max-width: 767px) {
+  .content.bg-white main#control {
+    grid-template-columns: 1fr;
+  }
+}
+.content.bg-white main#control section.conrtol {
+  padding: 20px;
+  margin-top: 30px;
+}
+.content.bg-white main#control section.conrtol h2 {
+  text-transform: capitalize;
+}
+.content.bg-white main#control section.conrtol P {
+  margin: 20px 0 30px;
+}
+.content.bg-white main#control section.conrtol .control-toggle {
+  display: flex;
+  justify-content: space-between;
+}
+.content.bg-white main#control section.conrtol .control-toggle p {
+  margin: 0px 0px 10px;
+}
+.content.bg-white main#control section.conrtol .control-toggle label input[type=checkbox] {
+  -webkit-appearance: none;
+  appearance: none;
+  transition: 0.5s ease-in-out;
+}
+.content.bg-white main#control section.conrtol .control-toggle label input[type=checkbox]:checked + .toggle-switch {
+  background-color: #0075ff;
+}
+.content.bg-white main#control section.conrtol .control-toggle label input[type=checkbox]:checked + .toggle-switch::before {
+  content: "\f00c";
+  left: 50px;
+  transition: 0.5s ease-in-out;
+}
+.content.bg-white main#control section.conrtol .control-toggle label .toggle-switch {
+  width: 80px;
+  height: 32px;
+  border-radius: 15px;
+  background-color: #ccc;
+  position: relative;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+.content.bg-white main#control section.conrtol .control-toggle label .toggle-switch::before {
+  transition: 0.5s ease-in-out;
+  content: "\f00d";
+  font-weight: 900;
+  font-family: var(--fa-style-family-classic);
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 4px;
+  top: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content.bg-white main#control section.conrtol textarea {
+  width: 100%;
+  height: 200px;
+  resize: none;
+  padding: 10px;
+  border-radius: 6px;
+  margin-top: 30px;
 }
 
 /*# sourceMappingURL=master.css.map */
